WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270727
[visionOS] LinearMediaPlayer does not present audio and text track options
https://bugs.webkit.org/show_bug.cgi?id=270727
Summary
[visionOS] LinearMediaPlayer does not present audio and text track options
Andy Estes
Reported
2024-03-08 18:12:41 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-08 18:13:14 PST
<
rdar://problem/124308729
>
Andy Estes
Comment 2
2024-03-08 18:15:33 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25661
EWS
Comment 3
2024-03-09 13:14:38 PST
Committed
275885@main
(ad43bc6864cf): <
https://commits.webkit.org/275885@main
> Reviewed commits have been landed. Closing PR #25661 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug