[visionOS] LinearMediaPlayer does not present audio and text track options https://bugs.webkit.org/show_bug.cgi?id=270727 rdar://124308729

Reviewed by Eric Carlson.

When introducing PlaybackSessionInterfaceLMK we neglected to provide implementations for
{audio, legible}MediaSelectionOptionsChanged, resulting in LinearMediaPlayer not presenting these
options in its UI.

Implemented these functions as well as the delegate callbacks to learn when the user changes tracks.

* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.h:
* Source/WebKit/Platform/ios/PlaybackSessionInterfaceLMK.mm:
(-[WKLinearMediaPlayerDelegate linearMediaPlayer:setAudioTrack:]):
(-[WKLinearMediaPlayerDelegate linearMediaPlayer:setLegibleTrack:]):
(WebKit::PlaybackSessionInterfaceLMK::audioMediaSelectionOptionsChanged):
(WebKit::PlaybackSessionInterfaceLMK::legibleMediaSelectionOptionsChanged):
(WebKit::PlaybackSessionInterfaceLMK::audioMediaSelectionIndexChanged):
(WebKit::PlaybackSessionInterfaceLMK::legibleMediaSelectionIndexChanged):
* Source/WebKit/UIProcess/Cocoa/WebKitSwiftSoftLink.h:
* Source/WebKit/UIProcess/Cocoa/WebKitSwiftSoftLink.mm:

Canonical link: https://commits.webkit.org/275885@main